# nasuka

./: .gitignore  README.md  create_daily_report.py  pyproject.toml
taskriptor/: calender_accessor.py  credentials.py  event.py
